# bobOS

./: Cargo.toml  README.md  setup.sh  setup2.sh
.cargo/: config.toml
boot/: boot.asm
initland/: Cargo.toml
systemland/kernel/: Cargo.toml
systemland/shell/: Cargo.toml
systemland/utilities/copy/: Cargo.toml
systemland/utilities/create/: Cargo.toml
systemland/utilities/delete/: Cargo.toml
systemland/utilities/dir/: Cargo.toml
systemland/utilities/move/: Cargo.toml
systemland/utilities/pwd/: Cargo.toml
